Drop hub_zone field
