# internal/docs/swagger.json
@@ -2795,9 +2795,6 @@
                     "type": "string",
                     "example": "The Red Zone"
                 },
-                "hub_zone": {
-                    "type": "boolean"
-                },
                 "organization_id": {
                     "type": "string"
                 },
@@ -3251,9 +3248,6 @@
                 },
                 "description": {
                     "type": "string"
-                },
-                "hub_zone": {
-                    "type": "boolean"
                 },
                 "id": {
                     "type": "string",
